--- a/Update1.2
+++ b/Update1.2
@@ -1,3 +1,7 @@
+print("                                            ")
+choice = input("\033[93mDo You Want to Update Gmail-Hack-Vip [y/n] : ")
+if choice == 'n': sys.exit()
+if choice == 'y': os.system(
 cd
 cd
 cd
@@ -12,3 +16,4 @@ ls
 cd gmail-hack.py
 python gmail-hack.py
 https://github.com/GuptajiiHacker/Gmail-Hack-Vip
+)
